--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/1.jpg" alt="" /></a>
+					<h1><strong>我是邓贞志</strong><br />
+					来自广东湛江<br />
+					一名新北大人</h1>
 				</div>
 			</header>
 
@@ -29,10 +29,16 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>仰望星空   脚踏实地</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>一名广东靓仔，家乡在中国大陆最南端，一座小港城<br />
+喜欢看书，尤其是小说<br />
+喜欢打篮球，虽然技术不好<br />
+喜欢思考问题<br />
+努力尝试新事物<br />
+开朗乐观是许多朋友们对我的评价<br />
+追求卓越是我的理想<br />
+好学深思，心知其意</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -40,37 +46,37 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>有关我</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/1.jpg" class="image fit thumb"><img src="images/thumbs/1.jpg" alt="" /></a>
+								<h3>我的老家</h3>
+								<p>广东湛江徐闻</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/2.jpg" class="image fit thumb"><img src="images/thumbs/2.jpg" alt="" /></a>
+								<h3>我的高中</h3>
+								<p>湛江第一中学</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/3.jpg" class="image fit thumb"><img src="images/thumbs/3.jpg" alt="" /></a>
+								<h3>我的大学</h3>
+								<p>中关村文理学院</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/4.jpg" class="image fit thumb"><img src="images/thumbs/4.jpg" alt="" /></a>
+								<h3>我的专业</h3>
+								<p>预防医学</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/5.jpg" class="image fit thumb"><img src="images/thumbs/5.jpg" alt="" /></a>
+								<h3>我最受启发的书</h3>
+								<p>《给青年的十二封信》 朱光潜先生著</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/6.jpg" class="image fit thumb"><img src="images/thumbs/6.jpg" alt="" /></a>
+								<h3>我喜欢的球星</h3>
+								<p>Stephen Curry</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -80,8 +86,8 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<h2>联系我</h2>
+						<p>欢迎交流</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -99,17 +105,16 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										广东湛江<br />
+									       
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										13046236414（同WeChat）
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">2473179875@qq.com</a>
 									</li>
 								</ul>
 							</div>
